--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -581,7 +581,11 @@ gChannelBondingMode24GHz=0
 # Allow STA+SAP SCC on DFS channel with master mode support disabled
 g_sta_sap_scc_on_dfs_chan=1
 
+#Skip DFS Channel in case of P2P Search
+# 0 - disable (Scan DFS Channel in P2P Search)
+# 1 - enable (Skip DFS Channel)
+gSkipDfsChannelInP2pSearch=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
-
