--- a/light/android.hardware.light@2.0-service.ginkgo.rc
+++ b/light/android.hardware.light@2.0-service.ginkgo.rc
@@ -1,16 +1,5 @@
 on boot
-    chown system system /sys/class/backlight/panel0-backlight/brightness
-    chown system system /sys/class/backlight/panel0-backlight/max_brightness
-    chown system system /sys/class/leds/red/brightness
-    chown system system /sys/class/leds/red/breath
-    chown system system /sys/class/leds/red/delay_off
-    chown system system /sys/class/leds/red/delay_on
-    chmod 0644 /sys/class/backlight/panel0-backlight/brightness
-    chmod 0644 /sys/class/backlight/panel0-backlight/max_brightness
-    chmod 0644 /sys/class/leds/red/brightness
-    chmod 0644 /sys/class/leds/red/breath
-    chmod 0644 /sys/class/leds/red/delay_off
-    chmod 0644 /sys/class/leds/red/delay_on
+    start vendor.light-hal-2-0
 
 service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.ginkgo
     interface android.hardware.light@2.0::ILight default
@@ -19,3 +8,4 @@ service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.g
     group system
     # shutting off lights while powering-off
     shutdown critical
+    disabled
